--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "parcel src/index.pug --open",
     "build-prod": "parcel build src/index.pug"
   },
-  "dependencies": {},
+  "dependencies": {
+    "js": "^0.1.0"
+  },
   "devDependencies": {
     "parcel-bundler": "latest",
     "pug": "^3.0.0",
